--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
----
-layout: default
----
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
-
-{{ content }}
+{% include header.html %}
+	<section class="box special">
+		<h3>{{ page.title }}</h3>
+		<span class="date">{{ page.date | date_to_string }}</span>
+		{{ page.content }}
+	</section>
+{% include footer.html %}
