Add disqus comment

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,11 @@
 <!-- Header -->
 	<header id="header" class="alt">
-		<h1><a href="{{ site.baseurl }}/index.html">Alpha</a> by HTML5 UP</h1>
+		<h1><a href="{{ site.baseurl }}/index">PIEA</a></h1>
 		<nav id="nav">
 			<ul>
-				<li><a href="{{ site.baseurl }}/index.html">Home</a></li>
-				<li><a href="{{ site.baseurl }}/blog">Blog</a></li>
-				<li>
+				<li><a href="{{ site.baseurl }}/">홈</a></li>
+				<li><a href="{{ site.baseurl }}/blog">블로그</a></li>
+				<!-- <li>
 					<a href="" class="icon fa-angle-down">Layouts</a>
 					<ul>
 						<li><a href="#">Generic</a></li>
@@ -22,7 +22,7 @@
 						</li>
 					</ul>
 				</li>
-				<li><a href="#" class="button">Sign Up</a></li>
+				<li><a href="#" class="button">Sign Up</a></li> -->
 			</ul>
 		</nav>
 	</header>
