--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,26 @@
 {% include header.html %}
-	<section class="box special">
-		<h3>{{ page.title }}</h3>
-		<span class="date">{{ page.date | date_to_string }}</span>
-		{{ page.content }}
-	</section>
+<section class="box special">
+	<h3>{{ page.title }}</h3>
+	<span class="date">{{ page.date | date_to_string }}</span> {{ page.content }}
+	<h3><i class="icon icon-comments-o"></i> 댓글</h3>
+	<div id="disqus_thread"></div>
+	<script>
+		/**
+		*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+		*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+		*/
+		var disqus_config = function () {
+			this.page.url = '{{ site.url }}{{ post.url }}';
+			this.page.identifier = '{{ page.id }}';
+		};
+		(function () { // DON'T EDIT BELOW THIS LINE
+			var d = document, s = d.createElement('script');
+			s.src = '//piea.disqus.com/embed.js';
+			s.setAttribute('data-timestamp', +new Date());
+			(d.head || d.body).appendChild(s);
+		})();
+	</script>
+	<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+	</div>
+</section>
 {% include footer.html %}
