상당히 많이 변경내용이 있음

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 {% include header.html %}
-<section class="box special">
+<section class="box special" style="text-align:left">
 	<h3>{{ page.title }}</h3>
 	<span class="date">{{ page.date | date_to_string }}</span> {{ page.content }}
 	<h3><i class="icon icon-comments-o"></i> 댓글</h3>
