--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <!-- Header -->
 	<header id="header" class="alt">
-		<h1><a href="{{ site.baseurl }}/index">PIEA</a></h1>
+		<h1><a href="{{ site.baseurl }}/">PIEA</a></h1>
 		<nav id="nav">
 			<ul>
 				<li><a href="{{ site.baseurl }}/">홈</a></li>
