so many changed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html lang="en-us">
-  
+<html lang="ko-kr">
+
+<head>
   {% include head.html %}
+</head>
 
-  <body>
-    {% include page-header.html %}
+<body>
+  {% include page-header.html %}
+  <section class="main-content">
+    {{ content }}
+    {% include comments.html %}
+    {% include page-footer.html %}
+  </section>
+</body>
 
-    <section class="main-content">
-      
-      {{ content }}
-
-      {% include page-footer.html %}
-
-    </section>
-
-  </body>
 </html>
