--- a/css/cayman.css
+++ b/css/cayman.css
@@ -190,3 +190,5 @@ a:hover { text-decoration: underline; }
 .site-footer-owner { display: block; font-weight: bold; }
 
 .site-footer-credits { color: #819198; }
+
+.main-image { display: block; margin-left: auto; margin-right: auto }
