--- a/css/cayman.css
+++ b/css/cayman.css
@@ -191,4 +191,4 @@ a:hover { text-decoration: underline; }
 
 .site-footer-credits { color: #819198; }
 
-.main-image { display: block; margin-left: auto; margin-right: auto }
+.center-content { display: block; margin-left: auto; margin-right: auto }
