--- a/css/cayman.css
+++ b/css/cayman.css
@@ -192,3 +192,5 @@ a:hover { text-decoration: underline; }
 .site-footer-credits { color: #819198; }
 
 .center-content { display: block; margin-left: auto; margin-right: auto }
+
+.post-title { text-align: center; }
