--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,5 +1,5 @@
 <section class="page-header">
-  <h1 class="project-name"><a href="../../../">{{ site.title }}</h1>
+  <h1 class="project-name"><a href="../../../">{{ site.title }}</a></h1>
   <h2 class="project-tagline">{{ site.tagline }}</h2>
   <a href="https://github.com/PIEA" class="btn">GitHub/PIEA</a>
 </section>
