--- a/css/cayman.css
+++ b/css/cayman.css
@@ -194,3 +194,5 @@ a:hover { text-decoration: underline; }
 .center-content { display: block; margin-left: auto; margin-right: auto }
 
 .post-title { text-align: center; }
+
+.pnf-text { text-align: center; margin-top: 2rem; margin-bottom: 1rem; font-size: 1.5em; font-weight: bold; color: #e53935; }
